--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "flowbite": "^2.2.1",
+    "jodit-react": "^1.3.39",
+    "mongoose": "^8.0.2",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-quill": "^2.0.0",
+    "tw-elements": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
